# TechInterviewPrep

./: README.md
.github/: workflow.yml
python/: README.md  pyproject.toml
python/leetcodeExercises/easy/Two-Sum-Python/: README.md  test.py  twoSum.py
python/leetcodeExercises/easy/longestCommonPrefix/: longestCommonPrefix.py  test.py
python/leetcodeExercises/easy/romantoInt/: romanToInt.py  test.py
