[project]
name = "python"
version = "0.1.0"
description = "Base directory for Tech interview prep"
authors = [
    { name = "Ben", email = "benthedev@outlook.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
